--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,4 +1,28 @@
 {%extends 'base.html'%}
 {%block content%}
+
+<div class="col-md-6 offset-md-3">
 <h1>Register</h1>
+
+    <form method="POST" action="">
+            {% csrf_token %}
+
+            {%if form.errors%}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    Your Form has Errors
+                    {%for field in Form%}
+                        {%if field.errors%}
+                            {{field.errors}}
+                        {%endif%}
+                    {%endfor%}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
+                </div>
+            {%endif%}
+            {{form.as_p}}
+
+            <button type="submit" class="btn btn-secondary">Register</button>
+
+    </form>
+</div>
+
 {%endblock%}
